--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,7 @@
         "aria-valid-attr": "off"
       }
     ],
-    "axe/name-role-value": "off"
+    "axe/name-role-value": "off",
+    "no-inline-styles": "off"
   }
 }
